--- a/docs/reference-guide/modules/migration/pages/paths/messages.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/messages.adoc
@@ -28,7 +28,7 @@ The following table summarizes the primary annotation changes:
 | Similar to revision, routing information is now consolidated within the `@Command` annotation, making the command's intent and behavior more explicit at the class level.
 |===
 
-== Explicit Message Types
+== Explicit message types
 
 One of the most significant changes in AF5 is the introduction of `MessageType`. 
 It decouples the logical name and version of a message from its Java class.
@@ -58,9 +58,9 @@ If you don't specify the annotation parameters, Axon uses the following default 
 
 For more details on how message types are resolved and used, see the xref:messaging-concepts:anatomy-message.adoc#message_type_resolution[Message type resolution] section in the Anatomy of a Message guide.
 
-== Routing and Identification
+== Routing and identification
 
-=== Target Entity Identification
+=== Target entity identification
 
 When sending a command to an entity (formerly aggregate), you previously used `@TargetAggregateIdentifier`. 
 In AF5, this is replaced by `@TargetEntityId`. This shift is part of the broader move towards Dynamic Consistency Boundaries. See the xref:migration:understanding-architecture-principles.adoc#moving-away-from-aggregates[architecture principles] for more context.
@@ -80,9 +80,9 @@ public class MarkOrderAsShippedCommand {
 }
 ----
 
-=== Command Routing
+=== Command routing
 
-For commands that require a specific routing key (e.g., for consistent hashing in a distributed command bus), the `@RoutingKey` annotation is replaced by the `routingKey` field in the `@Command` annotation.
+For commands that require a specific routing key (for example for consistent hashing in a distributed command bus), the `@RoutingKey` annotation is replaced by the `routingKey` field in the `@Command` annotation.
 
 [source,java]
 ----
@@ -100,5 +100,5 @@ public class MyCommand {
 ----
 
 Note that in AF5, the `routingKey` property in the annotation refers to the **name of the property** (field or method) in the class that should be used for routing.
-If a method name is provided, it can be the actual method name (e.g., `getCardId`) or the property name (e.g., `cardId`).
+If a method name is provided, it can be the actual method name (`getCardId`) or the property name (`cardId`).
 For more details, see the xref:commands:command-dispatchers.adoc#configuring-routing-keys-with-command[Configuring routing keys with @Command] section in the Command Dispatching guide.
